[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/InteractableObject.gd" type="Script" id=1]

[node name="InteractableObject" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="InteractArea" type="Area2D" parent="."]

[node name="InteractCollider" type="CollisionShape2D" parent="InteractArea"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
